<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/welcome" />

	    <TextView
	        android:id="@+id/results_kr_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/description1" 
	      	android:paddingBottom="@dimen/activity_vertical_margin"
	        />

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/description2" 
	       	android:paddingBottom="@dimen/activity_vertical_margin"
	        />

	    <TextView
	        android:id="@+id/menu_total_cost_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/description3" />

	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom|center" >

        <Button
            style="@style/ButtonStyle"
            android:background="@drawable/button_shape"
            android:id="@+id/start_button"
            android:text="@string/startbutton" />
       

    </LinearLayout>

</RelativeLayout>
