<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/course_type_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberofguests" />

        <EditText
            android:id="@+id/number_of_guests"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/results_kr_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalcost" 
            android:paddingRight="3dp"/>

        <TextView
            android:id="@+id/menu_total_cost_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" 
            android:paddingRight="3dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kr" />

    </LinearLayout>

    <TextView
        android:id="@+id/results_head_starter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_menu"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:paddingTop="3dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />
</LinearLayout>
